fixing short status badge alignment issue

--- a/public/styles/specifications.css
+++ b/public/styles/specifications.css
@@ -162,7 +162,7 @@ th.w-long {
 .spec-status {
     min-width: 48px;
 }
-.spec-status-sup {
+.spec-status-short {
     line-height: 1.1;
 }
 
